# ModernRetroRomManager

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
docs/: AUTID_FIX.md  api.md  plan.md  user-guide.md
scripts/: normalize_jy6d_dz_exports.py  scrape_jy6d_dz.py
server/: package.json  pnpm-lock.yaml
server/src/: index.ts  rom-service.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/db/: data.db
src-tauri/resources/: rename_logos.ps1
src-tauri/resources/cn-mapping/: 3do.csv  3ds.csv  dc.csv  fc.csv  gba.csv  md.csv  mdcd.csv  n64.csv  nds.csv  pcecd.csv  pcfx.csv  photocd.csv  psp.csv  psvall.csv  psvdlc.csv  ss.csv
src-tauri/resources/rom-name-cn/: Microsoft - MSX2.csv  NEC - PC Engine SuperGrafx.csv  Nintendo - Family Computer Disk System.csv  Nintendo - Game Boy.csv  Nintendo - GameCube.csv  Nintendo - New Nintendo 3DS.csv  Nintendo - Nintendo DS.csv  Nintendo - Nintendo Entertainment System.csv  Nintendo - Virtual Boy (32) (Chinese).csv  Nintendo - Wii U.csv  Nintendo - Wii.csv  Panasonic - 3DO Interactive Multiplayer.csv  Sega - Saturn.csv  name_alias(Chinese).json
src-tauri/src/: config.rs  lib.rs  main.rs  ps3_sfo.rs  rom_service.rs  settings.rs  system_mapping.rs
src-tauri/src/commands/: config.rs  directory.rs  export.rs  import.rs  mod.rs  naming_check.rs  ps3.rs  rom.rs  scan.rs  scraper.rs  system.rs  tools.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-tauri/src/migrations/: 001_initial.sql
src-tauri/src/ps3/: boxart.rs  mod.rs  sfo.rs
src-tauri/src/scanner/: detect.rs  hash.rs  mod.rs
src-tauri/src/scraper/: cn_repo.rs  jy6d_dz.rs  local_cn.rs  manager.rs  matcher.rs  mod.rs  pegasus.rs  persistence.rs  screenscraper.rs  steamgriddb.rs  types.rs
src/i18n/: index.ts
src/lib/: api.ts
src/pages/: ChineseRepo.tsx  CnName.tsx  CnRomTools.tsx  Import.tsx  Library.tsx  Scraper.tsx  Settings.tsx
src/stores/: appStore.ts  cnRomToolsStore.ts  index.ts  romStore.ts  scraperStore.ts
src/types/: index.ts
(+16 files in other folders)
