[package]
name = "modern-retro-rom-manager"
version = "0.1.0"
description = "现代化 Retro ROM 管理软件"
authors = ["dotSlash"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "modern_retro_rom_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
diesel = { version = "2.2", features = ["sqlite", "r2d2"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

