[package]
name = "modern-retro-rom-manager"
version = "0.2.0"
description = "现代化 Retro ROM 管理软件"
authors = ["dotSlash"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "modern_retro_rom_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
walkdir = "2.5.0"
crc32fast = "1.5.0"
md5 = "0.8.0"
sha1 = "0.10.6"
hex = "0.4.3"
tauri-plugin-dialog = "2.6.0"
reqwest = { version = "0.13.1", features = ["json"] }
async-trait = "0.1.89"
tauri-plugin-fs = "2.4.5"
urlencoding = "2.1.3"
quick-xml = { version = "0.39.0", features = ["serialize"] }
encoding_rs = "0.8"
chardetng = "0.1"
futures = "0.3.31"
csv = "1.4.0"
pinyin = "0.10"
iso9660_simple = "0.2.2"

